packages/svelte/tests/compiler-errors/samples/runes-module-store-subscription/main.svelte.js
import { store } from 'somewhere';

console.log($store);
